# image_downloader

./: .deny.toml  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  nx.json  package.json  pnpm-lock.yaml  rust-toolchain.toml
.cargo/: config.toml
apps/mobile-tauri/: index.html  package.json  project.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/mobile-tauri/src/: App.tsx  routeTree.gen.ts  styles.css
apps/mobile-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile-tauri/src-tauri/src/: main.rs
apps/mobile-tauri/src/features/gallery/: index.ts
apps/mobile-tauri/src/features/gallery/routes/: Gallery.tsx
apps/mobile-tauri/src/features/juliafatou/: index.ts
apps/mobile-tauri/src/features/juliafatou/routes/: Juliafatou.tsx
apps/mobile-tauri/src/routes/: __root.tsx  about.component.tsx
crates/image-tookkit/: Cargo.toml  README.md  uniffi.toml
crates/image-tookkit-cli/: Cargo.toml
crates/image-tookkit/src/: lib.rs
crates/image-toolkit-ffi/: Cargo.toml
crates/image_tookkit/: Cargo.toml
crates/image_tookkit/src/: utils.rs
crates/image_tookkit/src/download/: mod.rs
crates/image_tookkit_cli/: Cargo.toml  README.md  main.rs
crates/image_tookkit_cli/src/: helpers.rs  lib.rs  parsers.rs
crates/image_tookkit_cli/src/commands/: download_image.rs
crates/imagekit/: Cargo.toml  README.md  uniffi.toml
crates/imagekit-api/: Cargo.toml
crates/imagekit-api/src/: avatar.rs  juliafatou.rs  lib.rs  main.rs
crates/imagekit-cli/: Cargo.toml  README.md  main.rs
crates/imagekit-cli/src/commands/: avatar.rs  download.rs  download_image.rs  juliafatou.rs  mod.rs
crates/imagekit-json/: Cargo.toml
crates/imagekit-json/src/: client.rs  command.rs
crates/imagekit-ohos/: Cargo.toml  README.md  build.sh
crates/imagekit-ohos/package/: CHANGELOG.md  README.md  index.ets  oh-package.json5
crates/imagekit-ohos/src/: lib.rs
crates/imagekit-uniffi/: Cargo.toml  uniffi.toml
crates/imagekit-uniffi/src/: lib.rs
crates/imagekit-wasm/: Cargo.toml  README.md  build.sh
crates/imagekit-wasm/src/: client.rs
crates/imagekit/src/: lib.rs
crates/imagekit/src/avatar/: avatar.rs  color.rs  mod.rs  scale.rs  utils.rs
crates/imagekit/src/exif/: mod.rs
crates/imagekit/src/juliafatou/: juliafatou.rs  mod.rs  utils.rs
crates/imagekit/src/ocr/: mod.rs
crates/imagekit/src/ogimage/: mod.rs
crates/sdk-schemas/: Cargo.toml
crates/sdk-schemas/src/: main.rs
crates/uniffi-bindgen/: Cargo.toml
fixtures/: test.txt
languages/swift/: Package.swift  README.md  build.sh
languages/swift/Tests/ImagekitSdkTests/: ImagekitSdkTests.swift
languages/swift/iOS/App/: ContentView.swift
languages/wasm/: .gitignore  index.js  package.json
src/: cli.rs  lib.rs  utils.rs
src/commands/: mod.rs
support/schemas/schema_types/: SchemaTypes.json
support/scripts/: schemas.mjs
