[package]
name = "image_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "image_downloader"
path = "src/bin/image_downloader.rs"

[dependencies]
anyhow = "1.0.79"
atty = "0.2.14"
clap = {version = "4.4.12", features = ["derive"]}
console = "0.15.7"
futures-util = "0.3.30"
http-serde = "1.1.3"
image = "0.24.7"
indicatif = "0.17.7"
mime = "0.3.17"
rayon = "1.8.0"
reqwest = {version = "0.11.23", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "stream", "json"]}
rustls = {version = "0.22.1", default-features = false}
serde = "1.0.193"
serde_json = "1.0.109"
serde_json_lodash = "0.1.16"
syntect = "5.1.0"
tokio = {version = "1.35.1", features = ["full"]}
url = {version = "2.5.0", features = ["serde"]}

[dev-dependencies]
mockito = "1.2.0"
