[package]
name = "image_downloader"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/fw6/image_downloader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "image_downloader"
path = "src/bin/image_downloader.rs"

[dependencies]
anyhow = "1.0.79"
atty = "0.2.14"
clap = {version = "4.4.12", features = ["derive"]}
console = "0.15.7"
futures-util = "0.3.30"
http-serde = "1.1.3"
image = "0.24.7"
indicatif = "0.17.7"
mime = "0.3.17"
rayon = "1.8.0"
reqwest = {version = "0.11.23", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "stream", "json"]}
rustls = {version = "0.22.1", default-features = false}
serde = "1.0.193"
serde_json = "1.0.109"
serde_json_lodash = "0.1.16"
syntect = "5.1.0"
tokio = {version = "1.35.1", features = ["full"]}
url = {version = "2.5.0", features = ["serde"]}

[dev-dependencies]
mockito = "1.2.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.6.3"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "plan"
