[workspace]
resolver = "2"
members = ["crates/*", "apps/mobile-tauri/src-tauri"]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["feng.w <feng.w@trip.com>"]
repository = "https://github.com/fw6/imagekit"
license = "Unlicense OR MIT"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1.0.79"
atty = "0.2.14"
clap = { version = "4.4.12", features = ["derive"] }
console = "0.15.7"
futures-util = "0.3.30"
image = "0.24.7"
mime = "0.3.17"
rayon = "1.8.0"
reqwest = { version = "0.11.23", default-features = false, features = [
    "rustls-tls",
    "rustls-tls-native-roots",
    "stream",
    "json",
] }
rustls = { version = "0.22.1", default-features = false }
rusttype = "0.9.3"
serde = "1.0.195"
serde_json = "1.0.111"
serde_json_lodash = "0.1.16"
tokio = { version = "1.35.1", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }
uniffi = "=0.25.3"
schemars = "0.8.16"
itertools = "0.12.0"
num = "0.4"
crossbeam = "0.8.0"
colorgrad = "0.6.2"
getrandom = "0.2.12"
derive_builder = "0.13.0"
salvo = "0.65"
salvo-oapi-macros = "0.65"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
protobuf = "3.3.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html#debug
debug = 1
lto = "thin"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.6.3"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "plan"
