[package]
name = "image_toolkit_cli"
description = "A command line tool for image_toolkit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
atty.workspace = true
clap.workspace = true
console.workspace = true
futures-util = "0.3.30"
image = { workspace = true, default-features = false, features = [
    "gif",
    "jpeg",
    "jpeg_rayon",
    "ico",
    "png",
    "tiff",
    "webp",
    "webp-encoder",
    "bmp",
    "avif",
    "ico"
] }
image_toolkit = { version = "0.1.2", path = "../image_tookkit" }
rayon.workspace = true
reqwest = { workspace = true, default-features = false, features = ["stream"] }
tokio.workspace = true
url.workspace = true

[[bin]]
name = "image_toolkit"
path = "main.rs"
doc = false
