[package]
name = "imagekit-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { workspace = true, features = ["logging", "oapi"] }
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
imagekit = { path = "../imagekit", features = ["openapi"] }
