[package]
name = "imagekit-ohos"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { version = "*" }
napi-derive-ohos = { version = "*" }
log.workspace = true
ohos_hilog = "0.1"

[build-dependencies]
napi-build-ohos = { version = "*" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
