[package]
name = "imagekit_uniffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

# [features]
# docs = ["dep:schemars"] # Docs

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[dependencies]
schemars = {workspace = true}
uniffi.workspace = true
imagekit = { version = "0.1.2", path = "../imagekit" }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
