[package]
name = "imagekit-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
js-sys = "0.3.68"
log.workspace = true
serde = { workspace = true, features = ["derive"] }
wasm-bindgen = { version = "0.2.91", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.41"
imagekit = { path = "../imagekit", features = ["wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.41"
