[package]
name = "imagekit"
description = "Some useful image tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

openapi = ["dep:salvo", "dep:salvo-oapi-macros"] # OpenAPI client
cli = ["dep:clap"]                               # CLI service

mobile = ["dep:uniffi"]         # Mobile-specific features
wasm-bindgen = ["getrandom/js"]

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
image = { workspace = true }
mime.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde = { version = "1.0.195", features = ["derive"] }
serde_json.workspace = true
serde_json_lodash.workspace = true
url.workspace = true
num.workspace = true
crossbeam.workspace = true
colorgrad.workspace = true
getrandom.workspace = true
rusttype.workspace = true
derive_builder.workspace = true
kamadak-exif = "0.5.5"

uniffi = { workspace = true, optional = true, features = ["tokio"] }
clap = { workspace = true, optional = true }
salvo = { workspace = true, optional = true, features = ["oapi"] }
salvo-oapi-macros = { workspace = true, optional = true }

project-root.workspace = true
rten.workspace = true
rten-tensor.workspace = true
rten-imageio.workspace = true
ocrs.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
